--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -73,13 +73,13 @@
 }
 
 .logo h2 {
-  margin-left: 5px;
+  /* margin-left: 2px; */
   font-size: 1.4rem;
   font-weight: 550;
 }
 
 .logo .shop_icon {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
 }
 
 .navigation {
@@ -181,7 +181,7 @@
   top: -15px;
   right: 4px;
   font-weight: 550;
-  color: #a0e36eed;
+  color: #ffffff;
  
 }
 
@@ -216,106 +216,7 @@
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
   .container {
-    padding: 2rem 0;
-  }
-
-  .wrapper {
-    display: none;
-  }
-
-  .small_screen_wrapper {
-    width: 90%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    row-gap: 2rem;
-    align-items: flex-end;
-    justify-content: flex-start;
-    /* background-color: red; */
-  }
-
-  .top {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    color: white;
-  }
-
-  .top a {
-    color: white;
-    text-decoration: none;
-  }
-
-  .logo h2 {
-    font-size: 2.2rem;
-  }
-
-  .logo .shop_icon {
-    font-size: 2rem;
-  }
-
-  .menu_lists li p:nth-child(1) {
-    font-size: 1.4rem;
-  }
-
-  .menu_lists li p:nth-child(2) {
-    font-size: 1.8rem;
-    /* line-height: 2.5; */
-  }
-
-
-  .navigation li {
-    /* margin-left: 1rem; */
-    font-size: 1rem;
-  }
-
-  .navigation li:nth-child(2) {
-    margin-left: 1rem;
-  }
-
-  .dropdown {
-    position: relative;
-  }
-
-
-  .dropdown_email {
-    display: flex;
-    align-items: flex-end;
-  }
-
-  .dropdown_email .icon {
-    font-size: 2.1rem;
-    cursor: pointer;
-  }
-
-  .dropdown_menu {
-    top: 4rem;
-    width: 17rem;
-  }
-
-
-  .dropdown_menu .link {
-    font-size: 1.7rem;
-  }
-
-  .cart .cart_icon {
-    font-size: 2.2rem;
-  }
-
-  .cart .incart {
-    font-size: 1.8rem;
-    top: -30px;
-    right: 4.5px;
-
-  }
-
-
-}
-
-/* Mobile Devices :: Media Queries */
-@media screen and (min-width : 320px) and (max-width : 480px) {
-  .container {
-    padding: 2rem 0 1rem 0;
+    padding: 1.5rem 0 1rem 0;
   }
 
   .wrapper {
@@ -351,7 +252,7 @@
   .menu_bar,
   .close_btn {
     color: white;
-    font-size: 2.2rem;
+    font-size: 1.8rem;
   }
 
   .menu_bar {
@@ -361,17 +262,18 @@
   }
 
   .menu_mobile {
-    position: absolute;
-    top: -31.5px;
-    right: -13px;
+    position: fixed;
+    top: 0px;
+    right: 0px;
     background-color: #f3f3f3;
-    width: 20rem;
+    width: 25rem;
     /* height: 30rem; */
     padding: 3rem 1rem 1rem 1rem;
     height: fit-content;
     z-index: 100;
     transition: all .3s ease;
     /* display: none; */
+    border-radius: 3px;
   }
 
   .greeting {
@@ -380,9 +282,10 @@
     margin-bottom: 10px;
   }
 
+
   .greeting p:nth-child(1) {
     line-height: 0;
-    font-size: 1.3rem;
+    font-size: 1.25rem;
   }
 
   .nav_email {
@@ -397,7 +300,7 @@
 
   .menu_mobile .link {
     color: black;
-    font-size: 1.5rem;
+    font-size: 1.47rem;
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -406,6 +309,7 @@
 
   ._menu .link .icon {
     margin-right: 5px;
+    font-size: 1.3rem;
   }
 
   .close_btn {
@@ -415,26 +319,39 @@
     display: block;
     /* z-index: 1000; */
     color: black;
-    font-size: 2.2rem;
     margin-bottom: 20px;
     cursor: pointer;
   }
 
   .logo h2 {
-    font-size: 1.85rem;
+    font-size: 1.9rem;
+    display: flex;
+    align-items: flex-start;
   }
 
   .logo .shop_icon {
-    font-size: 1.7rem;
+    font-size: 1.8rem;
   }
 
-
-  .navigation li {
-    font-size: 1.7rem;
-  }
 
   .navigation .menu_lists {
     display: none;
+  }
+
+  .login_link {
+    display: flex;
+    flex-direction: column;
+    margin-right: 1.2rem;
+  }
+
+  .login_link p {
+    /* color: black; */
+    font-size: 1.5rem;
+  }
+
+  .login_link p:first-child {
+    font-size: 1.1rem;
+    line-height: 1px;
   }
 
   .cart .cart_icon {
@@ -442,9 +359,189 @@
   }
 
   .cart .incart {
-    font-size: 1.4rem;
-    top: -25px;
-    right: 4.5px;
+    font-size: 1.35rem;
+    top: -20px;
+    right: 4px;
+  }
+}
 
+/* Mobile Devices :: Media Queries */
+@media screen and (min-width : 320px) and (max-width : 768px) {
+  .container {
+    padding: 1rem 0 1rem 0;
+  }
+
+  .wrapper {
+    display: none;
+  }
+
+  .small_screen_wrapper {
+    width: 90vw;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 1rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .top {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    position: relative;
+  }
+
+  .top a {
+    color: white;
+    text-decoration: none;
+  }
+
+  .navigation li {
+    margin-left: 1rem;
+  }
+
+  .menu_bar,
+  .close_btn {
+    color: white;
+    font-size: 1.5rem;
+  }
+
+  .menu_bar {
+    display: block;
+    margin-left: 20px;
+    cursor: pointer;
+  }
+
+  .menu_mobile {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    background-color: #f3f3f3;
+    width: 20rem;
+    /* height: 30rem; */
+    padding: 3rem 1rem 1rem 1rem;
+    height: fit-content;
+    z-index: 100;
+    transition: all .3s ease;
+    /* display: none; */
+    border-radius: 3px;
+  }
+
+  .greeting {
+    border-bottom: 1px solid #d5d5d5;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+  }
+  
+
+  .greeting p:nth-child(1) {
+    line-height: 0;
+    font-size: 1rem;
+  }
+
+  .nav_email {
+    font-size: 1.2rem;
+    font-weight: normal;
+  }
+
+  ._menu {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .menu_mobile .link {
+    color: black;
+    font-size: 1.1rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    font-weight: normal;
+  }
+
+  ._menu .link .icon {
+    margin-right: 5px;
+    font-size: 1.05rem;
+  }
+
+  .close_btn {
+    position: absolute;
+    top: 8px;
+    right: 10px;
+    display: block;
+    /* z-index: 1000; */
+    color: black;
+    margin-bottom: 20px;
+    cursor: pointer;
+  }
+
+  .logo h2 {
+    font-size: 1.5rem;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .logo .shop_icon {
+    font-size: 1.5rem;
+  }
+
+
+  .navigation .menu_lists {
+    display: none;
+  }
+
+  .login_link {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .login_link p {
+    /* color: black; */
+    font-size: 1.1rem;
+  }
+
+  .login_link p:first-child {
+    font-size: 0.8rem;
+    line-height: 1px;
+  }
+
+  .cart .cart_icon {
+    font-size: 1.3rem;
+  }
+
+  .cart .incart {
+    font-size: 1rem;
+    top: -17px;
+    right: 3px;
+  }
+  
+}
+
+/* Mobile Devices :: Media Queries */
+@media screen and (max-width : 968px) and (orientation: landscape) {
+  .small_screen_wrapper {
+    width: 90vw;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem 0;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo h2 {
+    font-size: 1.7rem;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .cart .cart_icon {
+    font-size: 1.5rem;
+  }
+
+  .cart .incart {
+    font-size: 1.1rem;
+    top: -17px;
+    right: 3px;
   }
 }
