--- a/front-end/src/components/css/product.css
+++ b/front-end/src/components/css/product.css
@@ -7,11 +7,16 @@
     height: 100%;
     transition: 0.4s ease-in;
     border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .product .link {
     text-decoration: none;
     color: black;
+    outline: none;
 }
 
 .product:hover {
@@ -35,7 +40,7 @@
     text-align: center;
 }
 
-.content_ .title_large {
+.content_ h2 {
     font-size: 1.1rem;
     font-weight: 550;
     /* margin: 10px 0; */
@@ -43,11 +48,6 @@
     margin-top: 1rem;
 }
 
-.content_ .title_small {
-    display: none;
-    font-weight: 550;
-    margin-top: 1rem;
-}
 
 .content_ .rating {
     margin: 1rem 0 0 0;
@@ -70,6 +70,7 @@
     width: 100%;
     cursor: pointer;
     transition: 0.3s ease-in;
+    outline: none;
 }
 
 .product .buy:hover {
@@ -85,41 +86,19 @@
 
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
-    .content_ .title_large {
-        display: none;
+    ._product-img {
+        /* background-color: red; */
+        width: 100%;
+        height: 14rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
     }
 
-    .content_ .title_small {
-        display: block;
-        font-size: 1.9rem;
-    }
 
-    .content_ .rating {
-        font-size: 1.7rem;
-    }
-
-    .content_ .price {
-        font-size: 1.9rem;
-    }
-
-    .product .buy,
-    .product .outOfStock {
-        padding: 9px;
-        font-size: 1.5rem;
-    }
-
-}
-
-
-/* Mobile Devices :: Media Queries */
-@media screen and (min-width : 320px) and (max-width : 480px) {
-    .content_ .title_large {
-        display: block;
-        font-size: 1.5rem;
-    }
-
-    .content_ .title_small {
-        display: none;
+    .content_ h2 {
+        font-size: 1.45rem;
     }
 
     .content_ .rating {
@@ -134,6 +113,41 @@
     .product .outOfStock {
         padding: 9px;
         font-size: 1.3rem;
+    }
+
+}
+
+
+/* Mobile Devices :: Media Queries */
+@media screen and (min-width : 320px) and (max-width : 768px) {
+    ._product-img {
+        /* background-color: red; */
+        width: 100%;
+        height: 14rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+
+    .content_ h2 {
+        font-size: 1.25rem;
+    }
+
+    .content_ .rating {
+        font-size: 1.25rem;
+    }
+
+    .content_ .price {
+        font-size: 1.25rem;
+    }
+
+    .product .buy,
+    .product .outOfStock {
+        padding: 8px;
+        font-size: 1.1rem;
+        margin-bottom: 20px;
     }
 }
 
