--- a/front-end/src/components/css/searchBox.css
+++ b/front-end/src/components/css/searchBox.css
@@ -52,7 +52,7 @@
         display: flex;
         flex: 1;
         /* width: 100%; */
-        height: 3.7rem;
+        height: 3.3rem;
         align-items: flex-start;
         /* justify-content: center; */
         /* background-color: red; */
@@ -60,7 +60,7 @@
     }
 
     .search input {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 
 }
@@ -69,7 +69,17 @@
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
     .search {
-        height: 2.7rem;
+        width: 100%;
+        height: 2.25rem;
+        align-items: flex-start;
+        margin: 0;
+    }
+}
+
+/* Mobile Devices :: Media Queries */
+@media screen and (max-width : 968px) and (orientation: landscape) {
+    .search {
+        height: 2.1rem;
         align-items: flex-start;
         margin: 0;
     }
