--- a/front-end/src/components/css/slider.css
+++ b/front-end/src/components/css/slider.css
@@ -142,7 +142,7 @@
 
 .cta_btns .buy {
     background-color: transparent;
-    border: 2px solid white;
+    border: 1.7px solid white;
     color: white;
     margin-right: 2rem;
 }
@@ -175,21 +175,21 @@
     }
 
     .arrow {
-        bottom: -12rem;
-        width: 65px;
-        height: 65px;
+        bottom: -5rem;
+        width: 60px;
+        height: 60px;
     }
 
     .arrow_icon {
-        font-size: 2.7rem;
+        font-size: 2.2rem;
     }
 
     .social {
-        bottom: 12rem;
+        bottom: 25rem;
     }
 
     .social ul li a {
-        font-size: 2.1rem;
+        font-size: 1.9rem;
     }
 
     .slide {
@@ -209,19 +209,19 @@
     }
    
     .content .title1 {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
 
     .content .title2 {
-        font-size: 3.6rem;
+        font-size: 3rem;
     }
 
     .content .price {
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 
     .content .des {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         width: 100%;
     }
 
@@ -230,31 +230,31 @@
     }
 
     .cta_btns .buy, .cta_btns .explore {
-        padding: 12px 60px;
-        font-size: 1.5rem;
+        padding: 10px 60px;
+        font-size: 1.4rem;
     }
 
     .cta_btns .explore {
-        padding: 15px 60px;
+        padding: 10px 60px;
     }
 
     .cta_btns .buy {
         margin-right: 2rem;
-        border: 2px solid white;
+        border: 1.1px solid white;
     }
 
         
     .content_img {
-        width: 100%;
-        /* height: 50%; */
+        width: 45rem;
+        height: 45rem;
         position: relative;
     }
 
     .content_img img {
         /* flex: 1; */
         /* background-color: red; */
-        width: 110%;
-        height: 43rem;
+        width: 100%;
+        height: 100%;
         border: none;
         position: absolute;
         top: -2rem;
@@ -269,15 +269,15 @@
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
     .slider_container {
-        height: 165vh;
+        height: 130vh;
         /* background-color: #1c1c1c; */
     }
     
         
     .arrow {
-        width: 60px;
-        height: 60px;
-        bottom: -30rem;
+        width: 40px;
+        height: 40px;
+        bottom: -20rem;
     }
 
     .arrow2 {
@@ -300,13 +300,13 @@
     }
 
     .social ul li a {
-        font-size: 1.7rem;
+        font-size: 1.5rem;
     }
 
 
     .slide {
         width: 100vw;
-        height: 160vh;
+        min-height: 125vh;
     }
     
     .contents {
@@ -321,20 +321,20 @@
 
         
     .content .title1 {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
     .content .title2 {
         margin-top: 5px;
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     .content .price {
-        font-size: 2rem;
+        font-size: 1.7rem;
     }
 
     .content .des {
-        font-size: 1.29rem;
+        font-size: 1rem;
         width: 100%;
     }
 
@@ -349,31 +349,146 @@
     .cta_btns .buy {
         width: 100%;
         margin-right: 1rem;
-        padding: 12px 0;
-        font-size: 1.2rem;
+        padding: 8px 0;
+        font-size: 1rem;
+        border: 1px solid white;
     }
 
 
     .cta_btns .explore {
         width: 100%;
-        padding: 14.5px 0;
-        font-size: 1.2rem;
+        padding: 9px 0;
+        font-size: 1rem;
     }
 
         
     .content_img {
-        width: 100%;
-        /* height: 50%; */
+        width: 27rem;
+        height: 25rem;
         position: relative;
     }
 
     .content_img img {
-        width: 150%;
-        height: 42rem;
+        width: 100%;
+        height: 100%;
         border: none;
         position: absolute;
-        top: -4rem;
-        right: -5.5rem;
+        top: -10px;
+        right: 1rem;
+        object-fit: contain;
+    }
+
+}
+
+/* Mobile Devices :: Media Queries */
+@media screen and (max-width : 968px) and (orientation: landscape) {
+    .slider_container {
+        height: 250vh;
+        /* background-color: #1c1c1c; */
+    }
+
+
+    .arrow {
+        width: 40px;
+        height: 40px;
+        bottom: -15rem;
+    }
+
+    .arrow2 {
+        right: 10px;
+    }
+
+
+    .arrow1 {
+        left: 10px;
+        z-index: 2;
+    }
+
+
+    .arrow_icon {
+        font-size: 2.7rem;
+    }
+
+    .social {
+        bottom: 8.5rem;
+    }
+
+    .social ul li a {
+        font-size: 1.5rem;
+    }
+
+
+    .slide {
+        width: 100vw;
+        min-height: 220vh;
+    }
+
+    .contents {
+        flex-direction: column;
+        align-items: center;
+        width: 90vw;
+    }
+
+    .content {
+        margin-top: 2rem;
+    }
+
+
+    .content .title1 {
+        font-size: 1rem;
+    }
+
+    .content .title2 {
+        margin-top: 5px;
+        font-size: 1.8rem;
+    }
+
+    .content .price {
+        font-size: 1.7rem;
+    }
+
+    .content .des {
+        font-size: 1rem;
+        width: 100%;
+    }
+
+    .cta_btns {
+        width: 60%;
+        display: flex;
+        /* justify-content: center; */
+        align-items: center;
+        margin-top: 2rem;
+    }
+
+    .cta_btns .buy {
+        width: 100%;
+        margin-right: 1rem;
+        padding: 8px 0;
+        font-size: 1rem;
+        border: 1px solid white;
+    }
+
+
+    .cta_btns .explore {
+        width: 100%;
+        padding: 9px 0;
+        font-size: 1rem;
+    }
+
+
+    .content_img {
+        width: 27rem;
+        height: 25rem;
+        position: relative;
+    }
+
+    .content_img img {
+        width: 100%;
+        height: 100%;
+        border: none;
+        position: absolute;
+        top: -10px;
+        right: 1rem;
         object-fit: contain;
     }
 
