--- a/front-end/src/components/css/widgetLg.css
+++ b/front-end/src/components/css/widgetLg.css
@@ -65,9 +65,9 @@
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
     .widgetLgTitle {
-        font-size: 1.9rem;
+        font-size: 1.75rem;
         font-weight: 500;
-        border-bottom: 1.7px solid #cecece;
+        border-bottom: 1.1px solid #cecece;
     }
 
     .tablet_view {
@@ -92,19 +92,19 @@
 
     .tablet_view .head p {
         font-weight: 500;
-        font-size: 1.65rem;
+        font-size: 1.45rem;
     }
 
     .tablet_view .t_row {
         display: grid;
         grid-template-columns: 0.6fr 0.5fr 8.5rem 0.9fr;
-        border-bottom: 1.7px solid #fbfbfb;
+        border-bottom: 1.1px solid #fbfbfb;
         padding-bottom: 10px;
     }
 
     .tablet_view .t_row p {
         font-weight: normal;
-        font-size: 1.4rem;
+        font-size: 1.28rem;
     }
 
 
@@ -124,9 +124,9 @@
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
     .widgetLgTitle {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         font-weight: 500;
-        border-bottom: 1.7px solid #cecece;
+        border-bottom: 1px solid #cecece;
     }
 
     .tablet_view {
@@ -145,26 +145,88 @@
         display: grid;
         grid-template-columns: 1fr 0.4fr ;
         gap: 20px;
-        border-bottom: 1.7px solid #cecece;
+        border-bottom: 1px solid #cecece;
         padding-bottom: 10px;
     }
 
     .mobile_view .head p {
         font-weight: 500;
-        font-size: 1.3rem;
+        font-size: 1.05rem;
     }
 
     .mobile_view .t_row {
         display: grid;
-        grid-template-columns: 2.2fr 0.5fr ;
+        grid-template-columns: 2.5fr 0.3fr ;
         align-items: center;
-        border-bottom: 1.7px solid #fbfbfb;
+        border-bottom: 1px solid #fbfbfb;
         padding-bottom: 10px;
     }
 
     .mobile_view .t_row p {
         font-weight: normal;
+        font-size: 1rem;
+    }
+
+    .mobile_view .icon {
+        font-size: 1rem;
+    }
+
+}
+
+/* Mobile Devices :: Media Queries */
+@media screen and (max-width : 968px) and (orientation: landscape) {
+    .widgetLgTitle {
+        font-size: 1.6rem;
+        font-weight: 500;
+        border-bottom: 1.1px solid #cecece;
+    }
+
+    .tablet_view {
+        display: block;
+    }
+
+    .widgetLgTable {
+        display: none;
+    }
+
+    .mobile_view {
+        display: none;
+    }
+
+    .tablet_view .head {
+        display: grid;
+        grid-template-columns: 0.55fr 0.4fr 0.45fr 0.9fr;
+        gap: 20px;
+        border-bottom: 1.7px solid #cecece;
+        padding-bottom: 10px;
+    }
+
+    .tablet_view .head p {
+        font-weight: 500;
+        font-size: 1.35rem;
+    }
+
+    .tablet_view .t_row {
+        display: grid;
+        grid-template-columns: 0.6fr 0.5fr 8.5rem 0.9fr;
+        border-bottom: 1.1px solid #fbfbfb;
+        padding-bottom: 10px;
+    }
+
+    .tablet_view .t_row p {
+        font-weight: normal;
         font-size: 1.2rem;
     }
 
+
+
+    .tablet_view .success_,
+    .tablet_view .danger_,
+    .tablet_view ._pending_ {
+        padding: 4px;
+        text-align: center;
+        border-radius: 5px;
+        color: white;
+        font-size: 0.9rem !important;
+    }
 }
