--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -46,7 +46,7 @@ body {
 
 .admin_container .container_contents{
   flex: 3.8;
-  height: 100%;
+  /* min-height: 100%; */
   padding: 1rem 2rem 1rem 0;
 }
 
@@ -84,11 +84,11 @@ body {
 
 
 /* Tablet Devices :: Media Queries */
-@media screen and (min-width : 768px) and (max-width : 1024px) {
+@media screen and (min-device-width : 768px) and (max-device-width : 1024px) {
   .main {
     position: relative;
     width: 100%;
-    margin: -15rem 0 2rem 0;
+    margin: -27rem 0 2rem 0;
     z-index: 100%;
     border: none;
     outline: none;
@@ -96,21 +96,22 @@ body {
 
   .admin_container .container_contents {
     flex: 4;
-    min-height: 100%;
+    /* min-height: 100%; */
     padding: 1rem 5px 1rem 0;
   }
+
   .ToggleBtn {
     /* bottom: 7rem; */
     /* right: 12px; */
     z-index: 1000;
-    width: 3.7rem;
-    height: 3.7rem;
+    width: 2.5rem;
+    height: 2.5rem;
   }
 
   .ToggleBtn .icon {
     /* background-color: #033040; */
     color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
 }
@@ -129,27 +130,70 @@ body {
     width: 98vw;
     margin: 5px auto;
     background-color: #fefefe;
+    /* min-height: 90vh; */
   }
 
   .admin_container .container_contents {
     flex: 4;
-    min-height: 90vh;
+    /* min-height: 100vh; */
     padding: 2rem 5px 1rem 0;
     /* background-color: red; */
     overflow: hidden;
+    min-height: 90vh;
   }
 
   .ToggleBtn {
     /* bottom: 7rem; */
     /* right: 20px; */
     /* z-index: 1000; */
-    width: 3.1rem;
-    height: 3.1rem;
+    width: 2.1rem;
+    height: 2.1rem;
   }
 
   .ToggleBtn .icon {
     /* background-color: #033040; */
     color: white;
-    font-size: 1.7rem;
+    font-size: 1.2rem;
+  }
+}
+
+/* Mobile Devices :: Media Queries */
+@media screen and (max-width : 968px) and (orientation: landscape){
+  .main {
+    margin: -12rem 0 2rem 0;
+  }
+
+  .main_container {
+    width: 90vw;
+  }
+
+  .main_container_ {
+    width: 98vw;
+    margin: 5px auto;
+    background-color: #fefefe;
+    /* min-height: 90vh; */
+  }
+
+  .admin_container .container_contents {
+    flex: 4;
+    /* min-height: 100vh; */
+    padding: 2rem 5px 1rem 0;
+    /* background-color: red; */
+    overflow: hidden;
+    min-height: 90vh;
+  }
+
+  .ToggleBtn {
+    /* bottom: 7rem; */
+    /* right: 20px; */
+    /* z-index: 1000; */
+    width: 2.1rem;
+    height: 2.1rem;
+  }
+
+  .ToggleBtn .icon {
+    /* background-color: #033040; */
+    color: white;
+    font-size: 1.2rem;
   }
 }
