--- a/front-end/src/pages/Admin/Orders/orderList.css
+++ b/front-end/src/pages/Admin/Orders/orderList.css
@@ -83,11 +83,11 @@
 @media screen and (min-width : 768px) and (max-width : 1024px) {
     .OrdersContainer {
         width: 100%;
-        padding: 2rem 1rem 1rem 1rem;
+        padding: 1rem 1rem 1rem 1rem;
     }
 
     .OrdersContainer h2 {
-        font-size: 2.1rem;
+        font-size: 1.75rem;
     }
 
     .Tablet_display {
@@ -97,7 +97,7 @@
     ._Table_ .head_ {
         width: 100%;
         display: grid;
-        grid-template-columns: 10.5rem 8rem 9.6rem 11rem 4rem;
+        grid-template-columns: 15rem 9.5rem 12.5rem 4rem;
         border-bottom: 1px solid #d4d4d4;
         padding-bottom: 10px;
         margin-bottom: 10px;
@@ -107,8 +107,8 @@
     .tbody_ .tb_content_ {
         width: 100%;
         display: grid;
-        grid-template-columns: 9rem 7rem 8rem 10rem 4rem;
-        gap: 1.5rem;
+        grid-template-columns: 13rem 7.5rem 11rem 4rem;
+        gap: 2rem;
         margin-bottom: 10px;
         border-bottom: 1px solid #f5f5f5;
         padding-bottom: 10px;
@@ -124,7 +124,7 @@
 
     .tbody_ .tb_content_ p {
         font-weight: normal;
-        font-size: 1.7rem;
+        font-size: 1.35rem;
     }
 }
 
@@ -136,20 +136,23 @@
         padding: 2rem 1rem 1rem 1rem;
     }
 
+    .OrdersContainer h2 {
+        font-size: 1.35rem;
+    }
+
     .Tablet_display {
         display: none;
     }
 
+    ._Table_ .head_ {
+        grid-template-columns: 10.5rem 6.5rem 4rem;
+    }
     
 
     .tbody_ .tb_content_ {
         width: 100%;
         display: grid;
-        grid-template-columns: 7.5rem 6.5rem 4rem;
-        gap: 1.5rem;
-        margin-bottom: 10px;
-        border-bottom: 1px solid #f5f5f5;
-        padding-bottom: 10px;
+        grid-template-columns: 8.5rem 5.5rem 3.2rem;
     }
 
     .big {
@@ -166,6 +169,11 @@
 
     .tbody_ .tb_content_ p {
         font-weight: normal;
-        font-size: 1.25rem;
+        font-size: 1.05rem;
+    }
+
+    .userAction .icon {
+        font-size: 1.1rem;
+        cursor: pointer;
     }
 }
