--- a/front-end/src/pages/Login/auth.css
+++ b/front-end/src/pages/Login/auth.css
@@ -111,11 +111,22 @@
     color: #1b1b1b;
 }
 
+.Password {
+    position: relative;
+}
+
+.ShowPassword {
+    position: absolute;
+    right: 10px;
+    bottom: 30px;
+    cursor: pointer;
+}
+
 
 /* Tablet Devices :: Media Queries */
 @media screen and (min-width : 768px) and (max-width : 1024px) {
     .logo__ h2 {
-        font-size: 2.2rem;
+        font-size: 2rem;
     }
 
     .logo__ .shop_icon {
@@ -123,20 +134,20 @@
     }
 
     .auth_form {
-        width: 32rem;
+        width: 80%;
     }
 
     .auth_form h2 {
-        font-size: 1.9rem;
+        font-size: 1.7rem;
     }
 
     .auth_form input {
-        font-size: 1.5rem;
-        border-bottom: 2px solid #545353;
+        font-size: 1.4rem;
+        border-bottom: 1px solid #545353;
     }
 
     .auth_form .auth_btn {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     .auth_form .auth_btn:hover {
@@ -150,7 +161,7 @@
     }
 
     .info {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
     }
 
     
@@ -159,29 +170,30 @@
 /* Mobile Devices :: Media Queries */
 @media screen and (min-width : 320px) and (max-width : 480px) {
     .logo__ h2 {
-        font-size: 2rem;
+        margin-left: 0;
+        font-size: 1.5rem;
     }
 
     .logo__ .shop_icon {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
     }
 
     .auth_form {
-        width: 97%;
+        width: 90%;
     }
 
     .auth_form h2 {
-        font-size: 1.7rem;
+        font-size: 1.4rem;
         /* text-align: left; */
     }
 
     .auth_form input {
-        font-size: 1.4rem;
-        border-bottom: 2px solid #545353;
+        font-size: 1.1rem;
+        border-bottom: 1px solid #545353;
     }
 
     .auth_form .auth_btn {
-        font-size: 1.4rem;
+        font-size: 1.1rem;
     }
 
     .auth_form .auth_btn:hover {
@@ -189,13 +201,13 @@
     }
 
     .caution {
-        font-size: 1.2rem;
+        font-size: 0.9rem;
         color: #545353;
         margin: 1rem 0;
     }
 
     .info {
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     
 }
