--- a/front-end/src/pages/Cart/cart.css
+++ b/front-end/src/pages/Cart/cart.css
@@ -201,7 +201,7 @@
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    margin-top: 2rem;
+    margin-top: 10px;
     width: 100%;
     outline: none;
 }
